# image_similarity_search

./: .gitignore  README.md  main.py  pyproject.toml
image_similarity_search/: __init__.py  clustering.py  models.py  search_engine.py
image_similarity_search/config/: model_urls.yaml
